# loseit-cli

./: .gitattributes  .gitignore  .golangci.yml  .goreleaser.yaml  AGENTS.md  CLAUDE.md  GOAL.md  Makefile  README.md  RELEASING.md  SKILL.md  config.example.json  go.mod  pyproject.toml
.claude/: CLAWHUB_STANDARDS.md
.github/workflows/: deploy-clawhub-from-branch.yml  publish-clawhub.yml  release.yml
cmd/loseit-cli/: main.go
internal/cli/: commands_test.go  completion.go  config.go  dates.go  days.go  days_test.go  docs_security_test.go  doctor.go  exit.go  login.go  login_test.go  output.go  root.go  version.go
internal/config/: config.go  config_test.go
internal/export/: export.go  export_test.go  login.go  login_test.go
internal/nutrition/: nutrition.go  nutrition_test.go
internal/version/: version.go
loseit/: __init__.py  cli.py  config.py  daily_log.py  export.py  nutrition.py
testdata/golden/: days_json.golden
tests/: test_offline.py
